# hacknarok2026

./: README.md
frontend/: package-lock.json
frontend/hacknarok2026/: eslint.config.js  index.html  package-lock.json  package.json
frontend/hacknarok2026/src/: AccountPage.tsx  App.tsx  DataContext.tsx  HomePage.tsx  JudgePage.tsx  PaymentModal.tsx  ProjectPage.tsx  api.ts  config.ts  index.css  main.tsx  types.ts
frontend/hacknarok2026/src/components/: AuthPopup.tsx  ProjectSnippet.tsx
golang/: .env.example  go.mod  go.sum  main.go
golang/api/: files.go  git.go  handlers.go  model.go  service.go
project-eval/: Cargo.toml
project-eval/src/: main.rs  state.rs
project-eval/src/handlers/: auth.rs  comment.rs  health.rs  mod.rs  project.rs  rating.rs
project-eval/src/models/: comment.rs  mod.rs  project.rs  project_commit.rs  project_contributor.rs  project_language.rs  rating.rs  user.rs
project-eval/src/repositories/: comment_repository.rs  mod.rs  project_commit_repository.rs  project_contributor_repository.rs  project_language_repository.rs  project_repository.rs  rating_repository.rs  user_repository.rs
project-eval/src/schemas/: comment_schemas.rs  mod.rs  project_commit_schemas.rs  project_contributor_schemas.rs  project_language_schemas.rs  project_schemas.rs  rating_schemas.rs  user_schemas.rs
