[package]
name = "project-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["macros"]}
tokio = {version = "1.52.1", features = ["full"]}

sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono"]}

serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

validator = { version = "0.20.0", features = ["derive"]}

dotenvy = "0.15.7"
chrono = {version = "0.4.44", features = ["serde"]}
tower-http = {version = "0.6.8", features = ["cors"]}
